# gavel

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  config.template.yaml  config.vagrant.yaml  docker-compose.yml  gavel_config.template.env  initialize.py  pyproject.toml  requirements.txt  runserver.py
.github/workflows/: main.yml
gavel/: __init__.py  constants.py  crowd_bt.py  settings.py  stats.py  template_filters.py  utils.py
gavel/controllers/: __init__.py  admin.py  api.py  csrf_protection.py  default.py  error.py  judge.py
gavel/controllers/admins/: __init__.py  dashboard.py  judges.py  projects.py  settings.py
gavel/controllers/judges/: __init__.py  common.py  voting.py
gavel/models/: __init__.py  annotator.py  common.py  decision.py  item.py  setting.py
gavel/static/css/: _constants.scss  style.scss
gavel/static/js/: gavel.js
gavel/templates/: _item.html  admin.html  admin_annotator.html  admin_item.html  begin.html  closed.html  disabled.html  error.html  index.html  layout.html  logged_out.html  map.html  vote.html  wait.html  welcome.html
gavel/templates/admin/: _add_judges.html  _admin_navbar.html  _judge_row.html  _table_sorter.html  admin_layout.html  dashboard.html  judges.html  projects.html  settings.html
gavel/templates/admin/judges/: _add_judges.html  _judge_row.html  _project_link.html  _projects_list.html  (+2 more)
gavel/templates/judge/: _collapseable_project.html  _progress_bar.html  _project.html  begin.html  closed.html  disabled.html  judge_layout.html  vote.html  wait.html
(+5 files in other folders)
